<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">


    <android.support.v7.widget.AppCompatSpinner
        android:layout_width="match_parent"
        android:layout_height="80dp">
    </android.support.v7.widget.AppCompatSpinner>

    <android.support.v7.widget.AppCompatSpinner
        android:layout_width="match_parent"
        android:layout_height="80dp">
    </android.support.v7.widget.AppCompatSpinner>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="8dp">

        <TextView
            android:text="@string/flat_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/size_data"/>
        <TextView
            android:text="@string/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/size_data"/>
        <TextView
            android:text="@string/meter_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/size_data"/>
        <TextView
            android:text="@string/capacity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/size_data"/>
        <TextView
            android:text="@string/date_of_occupation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/size_data"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="70dp"
        android:layout_margin="16dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/reading"
            android:padding="12dp"
            android:maxLines="1"
            android:hint="New Reading"
            android:background="@drawable/custom_background"
            android:textColor="#000000"
            android:textColorLink="@color/cardview_light_background"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/email_til"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:layout_margin="16dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/name"
            android:padding="12dp"
            android:maxLines="1"
            android:hint="Remarks"
            android:background="@drawable/custom_background"
            android:textColor="#000000"
            android:textColorLink="@color/cardview_light_background"/>

    </android.support.design.widget.TextInputLayout>

</LinearLayout>